--- a/app/src/main/res/layout/activity_mobile_number.xml
+++ b/app/src/main/res/layout/activity_mobile_number.xml
@@ -63,7 +63,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/nunitosemibold"
                             android:gravity="center"
-                            android:text="@string/mobile"
+                            android:text="Mobile Number"
                             android:textColor="@color/black"
                             android:textSize="25sp" />
 
