With Progress bar

--- a/app/src/main/res/layout-v28/finalreport_layout.xml
+++ b/app/src/main/res/layout-v28/finalreport_layout.xml
@@ -262,7 +262,7 @@
             android:drawableStart="@drawable/ic_share"
             android:fontFamily="@font/nunitobold"
             android:padding="5dp"
-            android:textColor="#fff"
+            android:background="@drawable/transparent_background"
            />
 
         <com.google.android.material.button.MaterialButton
@@ -272,10 +272,9 @@
             android:layout_margin="5dp"
             android:background="@drawable/shapebuttons"
             android:fontFamily="@font/nunitobold"
-            android:padding="5dp"
             android:text="@string/change_details"
             android:textColor="#fff"
-            android:textSize="15sp" />
+            android:textSize="20sp" />
         </LinearLayout>
 
 
