--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -18,19 +18,18 @@
         <LinearLayout
             style="@style/Widget.Theme.ShikshanKrantiSanghatna.ButtonBar.Fullscreen"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="20dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
             android:background="@color/colorWhite"
             android:orientation="vertical"
             tools:ignore="UselessParent">
 
             <androidx.constraintlayout.utils.widget.ImageFilterView
                 android:id="@+id/img_logo"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:src="@mipmap/ic_logo" />
+                android:src="@drawable/ic_biglogo" />
 
             <TextView
                 android:id="@+id/tv_welcome"
@@ -38,9 +37,9 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/nunitobold"
                 android:textSize="40sp"
+                android:layout_margin="20dp"
                 android:textColor="@color/design_default_color_error"
                 android:layout_gravity="center"
-                android:layout_marginTop="20dp"
                 android:text="Welcome" />
         </LinearLayout>
 
