--- a/app/src/main/res/layout/activity_verification.xml
+++ b/app/src/main/res/layout/activity_verification.xml
@@ -16,7 +16,7 @@
             android:layout_height="120dp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:background="@drawable/ic_logo"
+            android:background="@drawable/ic_biglogo"
             android:contentDescription="TODO" />
 
     </RelativeLayout>
