--- a/app/src/main/res/layout/activity_verification.xml
+++ b/app/src/main/res/layout/activity_verification.xml
@@ -27,7 +27,8 @@
         android:layout_height="120dp"
         android:layout_below="@id/relativeLayout"
         android:layout_marginTop="-50dp"
-        android:background="@drawable/waves" />
+        android:background="@drawable/waves"
+        android:contentDescription="waves" />
 
     <TextView
         android:id="@+id/textView"
@@ -61,7 +62,8 @@
         android:digits="0123456789"
         android:inputType="number"
         android:hint="Please Enter OTP"
-        android:maxLength="6" />
+        android:maxLength="6"
+        android:autofillHints="" />
 
 
     <Button
