--- a/app/src/main/res/layout/capture_layout.xml
+++ b/app/src/main/res/layout/capture_layout.xml
@@ -39,7 +39,7 @@
             android:padding="10dp"
             android:contentDescription="TODO"
             android:src="@mipmap/ic_profile"
-            app:civ_border_color="@color/grey"
+            app:civ_border_color="#3e3e3e"
             app:civ_border_width="1dp" />
 
         <LinearLayout
@@ -98,7 +98,8 @@
                     android:src="@drawable/ic_photogallery"
                     android:text="Gallery"
                     android:textColor="#fff"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    android:contentDescription="Browse Image" />
 
                 <TextView
                     android:layout_width="wrap_content"
