--- a/app/src/main/res/layout/finalreport_layout.xml
+++ b/app/src/main/res/layout/finalreport_layout.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:keepScreenOn="true"
     android:orientation="vertical">
 
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
         <include layout="@layout/header" />
 
     </LinearLayout>
@@ -19,18 +20,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#fffdd0"
-        android:scrollbars="vertical"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:scrollbars="vertical">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cvIDCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            android:padding="20dp"
             android:background="@drawable/shapebuttons"
             android:outlineAmbientShadowColor="@color/colorPrimary"
             android:outlineSpotShadowColor="@color/colorPrimaryDark"
+            android:padding="20dp"
             tools:ignore="UnusedAttribute">
 
             <LinearLayout
@@ -50,14 +51,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:src="@mipmap/ic_launcher"
-                        android:contentDescription="Logo" />
+                        android:contentDescription="Logo"
+                        android:src="@mipmap/ic_launcher" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="center"
                         android:fontFamily="@font/nunitobold"
+                        android:gravity="center"
                         android:text="महाराष्ट्र राज्य शिक्षण क्रांती संघटना"
                         android:textColor="#fff"
                         android:textSize="20sp" />
@@ -77,29 +78,30 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
+                            android:gravity="center"
                             android:orientation="horizontal">
 
                             <de.hdodenhof.circleimageview.CircleImageView
-                                app:civ_border_width="1dp"
                                 android:id="@+id/ivPhoto"
-                                android:layout_width="200dp"
-                                android:layout_height="180dp"
-                                app:civ_border_color="#eeeeee"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
                                 android:contentDescription="Profile Photo"
                                 android:padding="10dp"
-                                android:src="@drawable/ic_book" />
+                                android:layout_marginRight="20dp"
+                                android:src="@drawable/ic_book"
+                                app:civ_border_color="#3e3e3e"
+                                app:civ_border_width="1dp" />
 
                             <ImageView
                                 android:id="@+id/ivqrcode"
-                                android:layout_width="0dp"
+                                android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
-                                android:layout_gravity="end"
-                                android:layout_weight="0.4"
+                                android:layout_marginLeft="20dp"
                                 android:background="@android:color/transparent"
                                 android:contentDescription="QR Code"
                                 android:src="@drawable/ic_book" />
                         </LinearLayout>
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -108,11 +110,11 @@
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:fontFamily="@font/nunitobold"
                                 android:gravity="start"
                                 android:padding="5dp"
-                                android:textColor="@color/orange"
-                                android:fontFamily="@font/nunitobold"
                                 android:text="@string/member"
+                                android:textColor="@color/orange"
                                 android:textSize="20sp" />
 
 
@@ -127,20 +129,20 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:gravity="start"
                                 android:fontFamily="@font/nunitobold"
+                                android:gravity="start"
                                 android:padding="5dp"
-                                android:textColor="@color/orange"
                                 android:text="@string/id_no"
+                                android:textColor="@color/orange"
                                 android:textSize="20sp" />
 
                             <TextView
                                 android:id="@+id/tvMemberID"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:fontFamily="@font/nunitobold"
                                 android:gravity="start"
                                 android:padding="5dp"
-                                android:fontFamily="@font/nunitobold"
                                 android:text="SK12345"
                                 android:textSize="20sp" />
                         </LinearLayout>
@@ -154,9 +156,9 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:fontFamily="@font/nunitobold"
                                 android:gravity="start"
                                 android:padding="5dp"
-                                android:fontFamily="@font/nunitobold"
                                 android:text="@string/name"
                                 android:textColor="@color/orange"
                                 android:textSize="20sp" />
@@ -165,13 +167,14 @@
                                 android:id="@+id/tvMemberName"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:padding="5dp"
-                                android:gravity="start"
                                 android:fontFamily="@font/nunitobold"
+                                android:gravity="start"
+                                android:padding="5dp"
                                 android:text="Aakash Mohan Jagtap"
                                 android:textSize="20sp" />
 
                         </LinearLayout>
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -180,9 +183,9 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:fontFamily="@font/nunitobold"
                                 android:gravity="start"
                                 android:padding="5dp"
-                                android:fontFamily="@font/nunitobold"
                                 android:text="@string/dob"
                                 android:textColor="@color/orange"
                                 android:textSize="20sp" />
@@ -191,9 +194,9 @@
                                 android:id="@+id/tvDob"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:padding="5dp"
                                 android:fontFamily="@font/nunitobold"
                                 android:gravity="start"
+                                android:padding="5dp"
                                 android:text="@string/dob"
                                 android:textSize="20sp" />
 
@@ -210,19 +213,20 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/location"
-                            android:padding="5dp"
-                            android:textColor="@color/orange"
                             android:fontFamily="@font/nunitobold"
                             android:gravity="start"
+                            android:padding="5dp"
+                            android:text="@string/location"
+                            android:textColor="@color/orange"
                             android:textSize="20sp" />
+
                         <TextView
                             android:id="@+id/tvLocation"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Thane,Shahapur"
-                            android:padding="5dp"
                             android:fontFamily="@font/nunitobold"
+                            android:padding="5dp"
+                            android:text="Thane,Shahapur"
                             android:textSize="20sp" />
                     </LinearLayout>
 
@@ -234,10 +238,10 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="@string/memyear"
-                            android:padding="5dp"
                             android:fontFamily="@font/nunitobold"
                             android:gravity="start"
+                            android:padding="5dp"
+                            android:text="@string/memyear"
                             android:textSize="20sp" />
                     </LinearLayout>
 
@@ -254,16 +258,16 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="horizontal">
+
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnShareID"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
+                android:background="@drawable/transparent_background"
                 android:drawableStart="@drawable/ic_share"
                 android:fontFamily="@font/nunitobold"
-                android:padding="5dp"
-                android:background="@drawable/transparent_background"
-                />
+                android:padding="5dp" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnChangeDetails"
