--- a/app/src/main/res/layout-v28/finalreport_layout.xml
+++ b/app/src/main/res/layout-v28/finalreport_layout.xml
@@ -86,7 +86,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:contentDescription="Profile Photo"
-                                android:layout_marginRight="20dp"
+                                android:layout_marginEnd="20dp"
                                 android:src="@drawable/ic_profile"
                                 app:civ_border_color="#3e3e3e"
                                 app:civ_border_width="1dp" />
@@ -95,7 +95,7 @@
                                 android:id="@+id/ivqrcode"
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
-                                android:layout_marginLeft="20dp"
+                                android:layout_marginStart="20dp"
                                 android:background="@android:color/transparent"
                                 android:contentDescription="QR Code"
                                 android:src="@drawable/ic_book" />
