--- a/app/src/main/res/layout/finalreport_layout.xml
+++ b/app/src/main/res/layout/finalreport_layout.xml
@@ -87,7 +87,7 @@
                                 android:layout_height="wrap_content"
                                 android:contentDescription="Profile Photo"
                                 android:padding="10dp"
-                                android:layout_marginRight="20dp"
+                                android:layout_marginEnd="20dp"
                                 android:src="@drawable/ic_book"
                                 app:civ_border_color="#3e3e3e"
                                 app:civ_border_width="1dp" />
@@ -96,7 +96,7 @@
                                 android:id="@+id/ivqrcode"
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
-                                android:layout_marginLeft="20dp"
+                                android:layout_marginStart="20dp"
                                 android:background="@android:color/transparent"
                                 android:contentDescription="QR Code"
                                 android:src="@drawable/ic_book" />
