--- a/app/src/main/res/layout/capture_layout.xml
+++ b/app/src/main/res/layout/capture_layout.xml
@@ -15,13 +15,14 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:gravity="center"
         android:orientation="vertical">
 
 
         <TextView
-            android:layout_width="309dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:fontFamily="@font/nunitobold"
@@ -38,7 +39,7 @@
             android:layout_gravity="center"
             android:padding="10dp"
             android:contentDescription="TODO"
-            android:src="@mipmap/ic_profile"
+            android:src="@drawable/ic_profile"
             app:civ_border_color="#3e3e3e"
             app:civ_border_width="1dp" />
 
