Small Mobile Testing Done Spinner etc Working

--- a/app/src/main/res/layout-v28/finalreport_layout.xml
+++ b/app/src/main/res/layout-v28/finalreport_layout.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:keepScreenOn="true"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:scrollbars="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,11 +28,11 @@
             android:id="@+id/cvIDCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_margin="15dp"
             android:background="@drawable/shapebuttons"
             android:outlineAmbientShadowColor="@color/colorPrimary"
             android:outlineSpotShadowColor="@color/colorPrimaryDark"
-            android:padding="20dp"
+            android:padding="5dp"
             tools:ignore="UnusedAttribute">
 
             <LinearLayout
@@ -56,12 +57,12 @@
 
                     <TextView
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:fontFamily="@font/nunitobold"
                         android:gravity="center"
                         android:text="महाराष्ट्र राज्य शिक्षण क्रांती संघटना"
                         android:textColor="#fff"
-                        android:textSize="20sp" />
+                        android:textSize="18sp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -85,8 +86,8 @@
                                 android:id="@+id/ivPhoto"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:contentDescription="Profile Photo"
                                 android:layout_marginEnd="20dp"
+                                android:contentDescription="Profile Photo"
                                 android:src="@drawable/ic_profile"
                                 app:civ_border_color="#3e3e3e"
                                 app:civ_border_width="1dp" />
@@ -111,7 +112,7 @@
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/nunitobold"
                                 android:gravity="start"
-                                android:padding="5dp"
+                                android:padding="4dp"
                                 android:text="@string/member"
                                 android:textColor="@color/orange"
                                 android:textSize="20sp" />
@@ -130,7 +131,7 @@
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/nunitobold"
                                 android:gravity="start"
-                                android:padding="5dp"
+                                android:padding="4dp"
                                 android:text="@string/id_no"
                                 android:textColor="@color/orange"
                                 android:textSize="20sp" />
@@ -141,7 +142,7 @@
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/nunitobold"
                                 android:gravity="start"
-                                android:padding="5dp"
+                                android:padding="4dp"
                                 android:text="SK12345"
                                 android:textSize="20sp" />
                         </LinearLayout>
@@ -157,7 +158,7 @@
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/nunitobold"
                                 android:gravity="start"
-                                android:padding="5dp"
+                                android:padding="4dp"
                                 android:text="@string/name"
                                 android:textColor="@color/orange"
                                 android:textSize="20sp" />
@@ -168,7 +169,7 @@
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/nunitobold"
                                 android:gravity="start"
-                                android:padding="5dp"
+                                android:padding="4dp"
                                 android:text="Aakash Mohan Jagtap"
                                 android:textSize="20sp" />
 
@@ -184,7 +185,7 @@
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/nunitobold"
                                 android:gravity="start"
-                                android:padding="5dp"
+                                android:padding="4dp"
                                 android:text="@string/dob"
                                 android:textColor="@color/orange"
                                 android:textSize="20sp" />
@@ -195,7 +196,7 @@
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/nunitobold"
                                 android:gravity="start"
-                                android:padding="5dp"
+                                android:padding="4dp"
                                 android:text="@string/dob"
                                 android:textSize="20sp" />
 
@@ -214,7 +215,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/nunitobold"
                             android:gravity="start"
-                            android:padding="5dp"
+                            android:padding="4dp"
                             android:text="@string/education"
                             android:textColor="@color/orange"
                             android:textSize="20sp" />
@@ -224,7 +225,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/nunitobold"
-                            android:padding="5dp"
+                            android:padding="4dp"
                             android:text="--"
                             android:textSize="20sp" />
                     </LinearLayout>
@@ -240,7 +241,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/nunitobold"
                             android:gravity="start"
-                            android:padding="5dp"
+                            android:padding="4dp"
                             android:text="@string/schoolname"
                             android:textColor="@color/orange"
                             android:textSize="20sp" />
@@ -250,7 +251,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/nunitobold"
-                            android:padding="5dp"
+                            android:padding="4dp"
                             android:text="---"
                             android:textSize="20sp" />
                     </LinearLayout>
@@ -266,7 +267,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/nunitobold"
                             android:gravity="start"
-                            android:padding="5dp"
+                            android:padding="4dp"
                             android:text="@string/designation"
                             android:textColor="@color/orange"
                             android:textSize="20sp" />
@@ -276,7 +277,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/nunitobold"
-                            android:padding="5dp"
+                            android:padding="4dp"
                             android:text="---"
                             android:textSize="20sp" />
                     </LinearLayout>
@@ -292,7 +293,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/nunitobold"
                             android:gravity="start"
-                            android:padding="5dp"
+                            android:padding="4dp"
                             android:text="@string/location"
                             android:textColor="@color/orange"
                             android:textSize="20sp" />
@@ -302,7 +303,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/nunitobold"
-                            android:padding="5dp"
+                            android:padding="4dp"
                             android:text="Thane,Shahapur"
                             android:textSize="20sp" />
                     </LinearLayout>
@@ -318,9 +319,9 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/nunitobold"
                             android:gravity="start"
-                            android:padding="5dp"
+                            android:padding="4dp"
                             android:text="@string/memyear"
-                            android:textSize="20sp" />
+                            android:textSize="16sp" />
                     </LinearLayout>
 
                 </LinearLayout>
@@ -339,19 +340,17 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnShareID"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
+                android:layout_width="90dp"
+                android:layout_height="60dp"
                 android:background="@drawable/transparent_background"
                 android:drawableStart="@drawable/ic_share"
-                android:fontFamily="@font/nunitobold"
-                android:padding="5dp" />
+                android:fontFamily="@font/nunitobold" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnChangeDetails"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_margin="5dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
                 android:background="@drawable/shapebuttons"
                 android:fontFamily="@font/nunitobold"
                 android:text="@string/change_details"
