Browse Compress then Upload

--- a/app/src/main/res/layout/capture_layout.xml
+++ b/app/src/main/res/layout/capture_layout.xml
@@ -74,7 +74,8 @@
                     android:src="@drawable/ic_camera"
                     android:text="Capture"
                     android:textColor="#fff"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    android:contentDescription="TODO" />
 
                 <TextView
                     android:layout_width="wrap_content"
