--- a/app/src/main/res/layout/terms_activity.xml
+++ b/app/src/main/res/layout/terms_activity.xml
@@ -2,24 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical"
-    android:keepScreenOn="true">
+    android:keepScreenOn="true"
+    android:orientation="vertical">
 
 
-        <include layout="@layout/header"/>
+    <include layout="@layout/header" />
 
-        <include
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            layout="@layout/shadow" />
+    <include
+        layout="@layout/shadow"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:orientation="vertical"
-            android:layout_margin="30dp"
-           >
+            android:layout_margin="10dp"
+            android:orientation="vertical">
 
 
                 <TextView
@@ -32,43 +31,36 @@
 
                 <CheckBox
                     android:id="@+id/cbagree"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:checked="false"
-                    >
+                    android:layout_margin="10dp"
+                    android:checked="false">
 
                 </CheckBox>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
                     android:layout_gravity="center"
+                    android:layout_margin="10dp"
                     android:fontFamily="@font/nunitobold"
                     android:text="@string/agreecheckbox"
-                    android:textSize="20sp"/>
+                    android:textSize="18sp" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/nextButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:layout_margin="10dp"
                     android:background="@drawable/shapebuttons"
-                    android:layout_margin="30dp"
                     android:fontFamily="@font/nunitobold"
-                     android:text="@string/next"
+                    android:text="@string/next"
                     android:textColor="#fff"
                     android:textSize="30sp" />
 
-            </LinearLayout>
-
-
-
-
-
-
-
+        </LinearLayout>
 
 
 </LinearLayout>
